--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
 				<div class="sectionContent">
 					<ul class="keySkills">
-						<p>*English(C1)</p>
+						<p>English(C1)</p>
 						</ul>
 				</div>
 				<div class="clear"></div>
